# .dotfiles

./: 404.html  CNAME  README.md  index.html  inventory.yml  mkdocs.yml  playbook-server.yml  playbook.yml  pyproject.toml  server-playbook.yml  setup.sh  vars.yml
.github/workflows/: mkdocs_publish.yml
docs/: index.md
docs/learn/: index.md  laying-the-groundwork.md  mapping-the-inventory.md  the-config-whisperer.md
docs/stylesheets/: extra.css
learn/: index.html
learn/laying-the-groundwork/: index.html
learn/mapping-the-inventory/: index.html
learn/the-config-whisperer/: index.html
roles/flux_cli/tasks/: main.yml
roles/fzf/tasks/: main.yml
roles/git/tasks/: main.yml
roles/helm/tasks/: main.yml
roles/k3s/tasks/: main.yml
roles/kubectl/tasks/: main.yml
roles/nvm/tasks/: main.yml
roles/pnpm/tasks/: main.yml
roles/poetry/tasks/: main.yml
roles/starship/files/: starship.toml
roles/starship/tasks/: main.yml
roles/tmux/files/: .tmux.conf
roles/tmux/tasks/: main.yml
roles/uv/tasks/: main.yml
roles/zoxide/tasks/: main.yml
roles/zsh/files/: .zshrc
roles/zsh/tasks/: main.yml
roles/zsh/templates/: zshrc.j2
search/: search_index.json
