[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.50",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-roamlinks-plugin>=0.3.2",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.1",
    "termynal>=0.13.0",
]
